--- a/src/styles/Canvas.css
+++ b/src/styles/Canvas.css
@@ -5,5 +5,5 @@ div.canvas {
     border-radius: 20px;
     padding: 1rem;
 
-    background-color: var(--dark-yellow);
+    background-color: var(--dark-white);
 }
