--- a/src/styles/AccountButton.css
+++ b/src/styles/AccountButton.css
@@ -10,8 +10,8 @@ div.account-button > img {
     width: 4rem;
     height: 4rem;
     padding: .5rem;
-    background-color: var(--white);
-    border: 5px solid var(--dark-yellow);
+    background-color: var(--black);
+    border: 5px solid var(--dark-white);
     border-radius: 50%;
     margin-right: -2rem;
     z-index: 2;
@@ -20,7 +20,8 @@ div.account-button > img {
 div.account-button > span {
     width: 100%;
     height: 3rem;
-    background-color: var(--light-yellow);
+    background-color: var(--white);
+    color: var(--black);
     border-radius: 0 10px 10px 0;
 
     display: flex;
