--- a/src/styles/PagesDropDown.css
+++ b/src/styles/PagesDropDown.css
@@ -2,7 +2,7 @@ div.choose-page {
     width: 100%;
     height: 3rem;
     border-radius: 10px 30px 30px 10px;
-    background-color: var(--light-yellow);
+    background-color: var(--white);
 
     display: flex;
     justify-content: space-between;
@@ -13,6 +13,7 @@ div.choose-page {
 
 div.choose-page > span {
     width: 80%;
+    color: var(--black);
 }
 
 div.choose-page > img {
@@ -21,5 +22,5 @@ div.choose-page > img {
     padding: .2rem;
     border-radius: 50%;
 
-    background-color: var(--white);
+    background-color: var(--black);
 }
