--- a/src/styles/DetailedCell.css
+++ b/src/styles/DetailedCell.css
@@ -8,11 +8,12 @@ div.detailed-cell {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 30px;
 }
 
 div.detailed-cell h2 {
-    padding: 1.5rem 0;
     font-size: 1.5rem;
+    margin-top: 30px;
     font-weight: normal;
     color: var(--white);
 }
@@ -30,19 +31,13 @@ div.detailed-cell button {
     align-items: center;
 }
 
-div.detailed-cell img {
-    min-width: 100%;
-    height: 90px;
-    object-fit: cover;
-    object-position: top;
-}
-
 div.detailed-cell div.cell-fill {
     width: 100%;
     flex-grow: 1;
     background-color: var(--red);
     border-radius: 0 0 10px 10px;
 
+    border-top: 5px dotted var(--white);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
