--- a/src/styles/ChooseTeacher.css
+++ b/src/styles/ChooseTeacher.css
@@ -1,14 +1,30 @@
 div.choose-teacher {
     z-index: 3;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 2.5rem);
     padding: .5rem;
+    padding-bottom: 1rem;
     border-radius: 10px;
     background-color: var(--black);
 
+    overflow: auto;
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+div.choose-teacher > input {
+    width: 100%;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    color: var(--black);
+    background-color: var(--white);
+    font-size: 1.2rem;
+}
+
+div.choose-teacher > input:focus {
+    outline: none;
 }
 
 div.choose-teacher div.controls {
@@ -22,6 +38,7 @@ div.choose-teacher div.controls {
 div.choose-teacher div.controls button {
     width: 50%;
     height: 100%;
+    min-height: 40px;
     border: none;
     border-radius: 10px;
     background-color: var(--white);
