--- a/src/styles/MultiSelectList.css
+++ b/src/styles/MultiSelectList.css
@@ -1,9 +1,8 @@
 div.multi-select-list {
     width: 100%;
     height: fit-content;
-    min-height: 10px;
-    padding: 0 .5rem .5rem .5rem;
-    border-radius: 20px;
+    border-radius: 10px;
+    padding: .5rem;
     background-color: var(--gray);
 
     display: flex;
@@ -17,4 +16,38 @@ div.multi-select-list h2 {
     border-radius: 10px;
     background-color: var(--black);
     color: var(--white);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div.multi-select-list div.list {
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+div.multi-select-list label {
+    width: 100%;
+    padding: 10px;
+    background-color: var(--black);
+    border-radius: 10px;
+    color: var(--white);
+    font-size: 1.2rem;
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+div.multi-select-list label:hover {
+    background-color: var(--white);
+    color: var(--black);
+}
+
+div.multi-select-list label input {
+    width: 30px;
+    height: 30px;
 }
