Possible final product... cansei de programar já

--- a/src/styles/MeetingManager.css
+++ b/src/styles/MeetingManager.css
@@ -12,6 +12,10 @@ section.manager {
     gap: 10px;
 
     background-color: var(--dark-white);
+
+    &.one {
+        grid-template-columns: 1fr;
+    }
 }
 
 section.manager::after {
